@@ -12,7 +12,7 @@ from lib.params import get_sipinvite_args
 
 
 def main():
-    ip, host, proxy, rport, proto, domain, contact_domain, from_name, from_user, from_domain, to_name, to_user, to_domain, transfer, auth_user, auth_pwd, user_agent, localip, threads, nosdp, verbose, sdes, nocolor, ofile, ppi, pai = get_sipinvite_args()
+    ip, host, proxy, rport, lport, proto, domain, contact_domain, from_name, from_user, from_domain, to_name, to_user, to_domain, transfer, auth_user, auth_pwd, user_agent, localip, threads, nosdp, verbose, sdes, nocolor, ofile, ppi, pai = get_sipinvite_args()
 
     s = SipInvite()
 
@@ -20,6 +20,7 @@ def main():
     s.host = host
     s.proxy = proxy
     s.rport = rport
+    s.lport = lport
     s.proto = proto
     s.domain = domain
     s.contact_domain = contact_domain
