@@ -12,13 +12,14 @@ from lib.params import get_sipsend_args
 
 
 def main():
-    ip, host, proxy, rport, proto, method, domain, contact_domain, from_name, from_user, from_domain, from_tag, to_name, to_user, to_domain, to_tag, user, pwd, digest, branch, callid, cseq, sdp, sdes, user_agent, localip, nocolor, ofile, ppi, pai = get_sipsend_args()
+    ip, host, proxy, rport, lport, proto, method, domain, contact_domain, from_name, from_user, from_domain, from_tag, to_name, to_user, to_domain, to_tag, user, pwd, digest, branch, callid, cseq, sdp, sdes, user_agent, localip, nocolor, ofile, ppi, pai = get_sipsend_args()
 
     s = SipSend()
     s.ip = ip
     s.host = host
     s.proxy = proxy
     s.rport = rport
+    s.lport = lport
     s.proto = proto
     s.method = method
     s.domain = domain
